# orcas

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.codex/: README.md  config.toml
.codex/agents/: dev.toml  director.toml  integration.toml  supervisor.toml  test.toml
.codex/docs/: roles.md
.github/workflows/: ci.yml
.tt/: managed-project.toml  plan.toml  project.toml  settings.env  state.toml
.tt/contracts/: worker-contract.md
.tt/skills/: README.md  TT_SKILLS_TODO.md
codex-role-pack/: AGENTS.md  README.md
codex-role-pack/.codex/: config.toml
codex-role-pack/docs/: roles.md
crates/orcas/: Cargo.toml
crates/orcas-codex/: Cargo.toml
crates/orcas-core/: Cargo.toml
crates/orcas-daemon/: Cargo.toml
crates/orcas-operator-web/: Cargo.toml  style.css
crates/orcas-server/: Cargo.toml
crates/orcas-server-client/: Cargo.toml
crates/orcas-supervisor/: Cargo.toml
crates/orcas-supervisor/src/: main.rs  service.rs  streaming.rs
crates/orcas-tui/: Cargo.toml
crates/orcas-tui/src/: app.rs  backend.rs  main.rs  render.rs  runtime.rs  test_harness.rs  tests.rs  view_model.rs
crates/orcas-tui/src/codex/: mod.rs  session.rs
crates/orcas-tui/src/render/: collaboration.rs  mod.rs  review.rs  shared.rs  shell.rs  supervisor.rs  threads.rs
crates/orcas-tui/src/view_model/: collaboration.rs  main.rs  mod.rs  overview.rs  review.rs  shared.rs  threads.rs
crates/orcasd/: Cargo.toml
crates/tt-cli/: Cargo.toml
crates/tt-codex/: Cargo.toml
crates/tt-daemon/: Cargo.toml
crates/tt-domain/: Cargo.toml
crates/tt-git/: Cargo.toml
crates/tt-git/src/: lib.rs
crates/tt-linux-sandbox/: Cargo.toml
crates/tt-linux-sandbox/src/: main.rs  request.rs
crates/tt-sandboxing/: Cargo.toml
crates/tt-sandboxing/src/: lib.rs  linux.rs  workspace.rs
crates/tt-store/: Cargo.toml
crates/tt-tui/: Cargo.toml
crates/tt-ui-core/: Cargo.toml
docs/: CLI_REFERENCE.md  NEXT_MILESTONES.md  WORKSTREAM_TODO.md  architecture.md  cli-reference.md  codex-app-server-notes.md  codex-thread-supervision-v1.md  collaboration.md  configuration.md  install.md  ipc-protocol.md  logging.md  managed-projects.md  operations.md  orcas-cheatsheet.md  orcas-daemon.md  supervisor.md  testing.md  tt-realign-todo.md  tt_codex_runtime_contract.md  tt_v2_architecture.md  tui-behavior-contract.md  validate-workflows-todo.md  workspace-lifecycle.md
docs/adr/: 0001-tracked-thread-is-a-local-binding-record.md
docs/design/: local-authority-mvp-backend.md  orcas-control-plane-alignment.md  tt-control-plane-alignment.md
packaging/man/: orcas-tui.1  tt.1  (+3 more)
(+174 files in other folders)
