[package]
name = "orcas-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "orcas"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
orcas-codex = { path = "../orcas-codex" }
orcas-core = { path = "../orcas-core" }
tokio.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
