[package]
name = "tt-linux-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tt-runtime = { path = "../tt-runtime" }
tt-sandboxing = { path = "../tt-sandboxing" }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"

[lints]
workspace = true
