[package]
name = "tt-sandboxing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tt-core = { path = "../tt-core" }
tt-runtime = { path = "../tt-runtime" }

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true
